--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "i": "^0.3.7",
+    "lodash.debounce": "^4.0.8",
+    "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.6",
+    "npm": "^9.4.1",
+    "use-debounce": "^9.0.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
